[workspace]
resolver = "3"
members = [ "bevy_pointcloud", "pointcloud","pointcloud_viewer"]

[workspace.dependencies]
rstar = "0.12.2"
las = {version = "0.9.6", features = ["laz"]}
derive_more = { version = "2.0.1", features = ["full"] }
rayon = "1.11.0"
bevy = { version = "0.16.0" }


[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev.package."*"]
opt-level = 3
